# cookiecutter-python-project

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  cliff.toml  pyproject.toml
{{cookiecutter.project_name}}/.jenkins/coding/: Jenkinsfile  buildonly.Jenkinsfile
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/docs/source/_static/css/: style.css
{{cookiecutter.project_name}}/eaphone/{{cookiecutter.project_package}}/: __init__.py  version.py
