[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_full_package }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
{% if cookiecutter.install_as_package -%}
packages = [{ include = "eaphone" }]
{% else -%}
package-mode = false
{% endif %}

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7"

{% if cookiecutter.setup_ci -%}
[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
{% endif %}
{% if cookiecutter.include_sphinx -%}
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
{%- if cookiecutter.include_jupyter_in_doc -%}
myst-nb = "^1.1"
{%- endif %}
sphinx_rtd_theme = "^2"
sphinx-last-updated-by-git = "^0.3"
sphinx = "^7.4"
{%- endif %}
{%- if cookiecutter.include_pytest -%}
[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^8.3"
pytest-cov = "^5"
{%- endif %}

[[tool.poetry.source]]
name = "aliyun-mirror"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "eaphone-protected"
url = "https://biggates-pypi.pkg.coding.net/python-projects/protected/simple/"
priority = "supplemental"

[tool.ruff.lint]
ignore = ["F821", "E501"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["eaphone"]

{% if cookiecutter.include_pytest -%}
[tool.pytest.ini_options]
addopts = "-ra --cov=eaphone.{{ cookiecutter.project_package }} --cov-report=xml --cov-report=html:htmlcov --cov-report=term --junitxml=reports/test-result.xml"
{% endif -%}
