[project]
name = "{{ cookiecutter.project_full_package }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.10, <3.14"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
{% if cookiecutter.install_as_package -%}
packages = [{ include = "eaphone" }]
{% else -%}
package-mode = false
{% endif %}

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
loguru = "^0.7"

{% if cookiecutter.setup_ci -%}
[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
{% endif %}
{% if cookiecutter.include_sphinx -%}
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
{%- if cookiecutter.include_jupyter_in_doc -%}
myst-nb = "^1.1"
{%- endif %}
sphinx_rtd_theme = ">=3"
sphinx-last-updated-by-git = "^0.3"
sphinx = ">=8.1"
{%- endif %}
{%- if cookiecutter.include_pytest -%}
[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^8.3"
pytest-cov = "^5"
{%- endif %}

[[tool.poetry.source]]
name = "aliyun-mirror"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "eaphone-protected"
url = "https://biggates-pypi.pkg.coding.net/python-projects/protected/simple/"
priority = "supplemental"

[tool.ruff.lint]
ignore = ["F821", "E501"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["eaphone"]

{% if cookiecutter.include_pytest -%}
[tool.pytest.ini_options]
addopts = "-ra --cov=eaphone.{{ cookiecutter.project_package }} --cov-report=xml --cov-report=html:htmlcov --cov-report=term --junitxml=reports/test-result.xml"
{% endif -%}
